tests/invalid/StaticVar_Invalid_6.whiley
final int x = y + 1
final int y = x